--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -14,7 +14,9 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Copia requirements y instala dependencias
-COPY server/requirements.txt /app/requirements.txt
+# COPY server/requirements.txt /app/requirements.txt
+COPY requirements.txt /app/requirements.txt
+
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
